package com.biblioteca.biblioteca.model;

import javax.persistence.Entity;
import javax.persistence.Id;

@Entity
public class EstadisticaPrestamosPieChart {
    @Id
    private int bibliotecaId;
    private String biblioteca;
    private int subtotal;
    private int total;

    public int getBibliotecaId() {
        return bibliotecaId;
    }

    public void setBibliotecaId(int bibliotecaId) {
        this.bibliotecaId = bibliotecaId;
    }

    public String getBiblioteca() {
        return biblioteca;
    }

    public void setBiblioteca(String biblioteca) {
        this.biblioteca = biblioteca;
    }

    public int getSubtotal() {
        return subtotal;
    }

    public void setSubtotal(int subtotal) {
        this.subtotal = subtotal;
    }

    public int getTotal() {
        return total;
    }

    public void setTotal(int total) {
        this.total = total;
    }
}
